--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "MIT",
   "devDependencies": {
     "bs-platform": "^5.0.6"
+  },
+  "dependencies": {
+    "reason-react": "^0.7.0"
   }
 }
