change license to AGPL-3.0

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "author": "",
   "private": true,
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "devDependencies": {
     "bs-platform": "^5.0.6"
   },
