--- a/packages/foo/package.json
+++ b/packages/foo/package.json
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "AGPL-3.0",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
